<resources>
    <string name="app_name">shovl</string>
    <string name="app_logo">shovl.</string>
    <string name="login_title">Login to your\nAccount</string>
    <string name="edtEmail">Email</string>
    <string name="edtPassword">Password</string>
    <string name="register_title">Create your\nAccount</string>
    <string name="or_continue_with">or continue with</string>
    <string name="btnSignup">Sign up</string>
    <string name="btnSignin">Sign in</string>
    <string name="edt_username">Username</string>
    <string name="email_empty">Email can\'t be empty</string>
    <string name="empty_password">Password can\'t be empty</string>
    <string name="name_empty">Username is required</string>
    <string name="register_failed">Failed to create account</string>
    <string name="sign_out">Sign Out</string>
    <string name="get_started">Get started</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have an account yet?</string>
</resources>